--- a/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
+++ b/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.InfoInput_hp_menu"
         tools:targetApi="31">
         <activity
+            android:name=".Menu"
+            android:exported="false" />
+        <activity
             android:name=".info_input"
             android:exported="false" />
         <activity
