介面功能完成
輸入頁、主頁、菜單

--- a/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
+++ b/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity android:name=".AchievementActivity" />
     </application>
 
 </manifest>
