--- a/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
+++ b/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -11,23 +10,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.InfoInput_hp_menu"
+        android:theme="@style/Theme.Chen"
         tools:targetApi="31">
         <activity
-            android:name=".Menu"
-            android:exported="false" />
-        <activity
-            android:name=".info_input"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity android:name=".AchievementActivity" />
     </application>
 
 </manifest>
