--- a/InfoInput_hp_menu/gradle/wrapper/gradle-wrapper.properties
+++ b/InfoInput_hp_menu/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Aug 25 13:42:54 CST 2024
+#Sun Aug 25 13:54:51 GMT+08:00 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
