--- a/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
+++ b/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Chen"
+        android:theme="@style/Theme.InfoInput_hp_menu"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
