--- a/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
+++ b/InfoInput_hp_menu/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+5    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InfoInput_hp_menu"
         tools:targetApi="31">
+
         <activity
             android:name=".Menu"
             android:exported="false" />
@@ -28,6 +29,6 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity android:name=".AchievementActivity" />
+        <activity android:name=".HistoryActivity" /> <!-- 註冊History活動 -->
     </application>
-
 </manifest>
